--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		  <a href="https://iob.uga.edu/" target="_blank">Institute of Bioinformatics</a> (Affiliated)&nbsp;
 		  
         </p>
-        <p class="">804 Boyd GSRC, University of Georgia, Athens, GA 30602
+        <p class="">178 Elson, University of Virginia, Charlottesville, VA 22903
           <br>Email: sheng.li [AT] uga.edu</p>
       </div>
       <div class="col-md-3 mx-4">
