--- a/index.html
+++ b/index.html
@@ -54,12 +54,8 @@
         <img class="img-fluid d-block my-5" src="Pics/UGA_Logo.png"> </div>
       <div class="text-center col-lg-6">
         <h2 contenteditable="false" class="my-4">Sheng Li</h2>
-        <p class="lead w-100 my-3">Assistant Professor, <a href="http://www.cs.uga.edu" target="_blank">Department of Computer Science</a>&nbsp;
-          <br>
-		  <a href="https://www.ai.uga.edu/" target="_blank">Institute for Artificial Intelligence</a> (Affiliated)&nbsp;
-		  <br>
-		  <a href="https://iob.uga.edu/" target="_blank">Institute of Bioinformatics</a> (Affiliated)&nbsp;
-		  
+        <p class="lead w-100 my-3">Assistant Professor, <a href="http://www.cs.uga.edu" target="_blank">School of Data Science</a>&nbsp;
+	  
         </p>
         <p class="">178 Elson, University of Virginia, Charlottesville, VA 22903
           <br>Email: sheng.li [AT] uga.edu</p>
