--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="container">
     <div class="row my-2">
       <div class="col-md-2">
-        <img class="img-fluid d-block my-5" src="Pics/UGA_Logo.png"> </div>
+        <img class="img-fluid d-block my-5" src="Pics/UVA_logo.png"> </div>
       <div class="text-center col-lg-6">
         <h2 contenteditable="false" class="my-4">Sheng Li</h2>
         <p class="lead w-100 my-3">Assistant Professor, <a href="http://www.cs.uga.edu" target="_blank">School of Data Science</a>&nbsp;
