--- a/index.html
+++ b/index.html
@@ -51,15 +51,13 @@
   <div class="container">
     <div class="row my-2">
       <div class="col-md-2">
-        <img class="img-fluid d-block my-5" src="Pics/UVA_logo.png"> </div>
-      <div class="text-center col-lg-6">
-        <h2 contenteditable="false" class="my-4">Sheng Li</h2>
-        <p class="lead w-100 my-3">Assistant Professor, <a href="http://www.cs.uga.edu" target="_blank">School of Data Science</a>&nbsp;
-	  
-        </p>
-        <p class="">178 Elson, University of Virginia, Charlottesville, VA 22903
-          <br>Email: sheng.li [AT] uga.edu</p>
-      </div>
+	      <img class="img-fluid d-block my-5" src="Pics/UVA_logo.png"> </div>
+      <div class="text-center col-lg-7">
+	      	<h2 contenteditable="false" class="my-4">Sheng Li</h2>
+		<p class="lead w-100 my-3">Assistant Professor, <a href="http://datascience.virginia.edu" target="_blank">School of Data Science</a></p>
+		<p class="">178 Elson, University of Virginia, Charlottesville, VA 22903
+		<br>Email: vga8uf [AT] virginia.edu</p>
+	</div>
       <div class="col-md-3 mx-4">
         <img class="img-fluid d-block" src="Pics/ShengLi2019.png"> </div>
     </div>
