--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	      	<h2 contenteditable="false" class="my-4">Sheng Li</h2>
 		<p class="lead w-100 my-3">Assistant Professor, <a href="http://datascience.virginia.edu" target="_blank">School of Data Science</a></p>
 		<p class="">178 Elson, University of Virginia, Charlottesville, VA 22903
-		<br>Email: vga8uf [AT] virginia.edu</p>
+		<br>Email: shengli [AT] virginia.edu</p>
 	</div>
       <div class="col-md-2 mx-3">
         <img class="img-fluid d-block" src="Pics/ShengLi2019.png"> </div>
