--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
-		  	<li>07/2022, Received an <strong>NIH U01 Grant</strong> (as Co-I; PI: Prof. Natarajan Kannan) to annotate dark ion-channel functions by language modeling and knowledge graph embedding.</li>  
-		  	<li>06/2022, Received an <strong>NIH Supplement Grant</strong> (as Co-I; PI: Prof. Donglan Zhang) to examine disparities in Alzheimer’s disease and related dementias using machine learning.</li>
+		  	<li>07/2022, Received an <strong>NIH U01 Grant</strong> (as Co-I; PI: Prof. Natarajan Kannan) to annotate dark ion-channel functions by language modeling.</li>  
+		  	<li>06/2022, Received an <strong>NIH Supplement Grant</strong> (as Co-I; PI: Prof. Donglan Zhang) to examine disparities in ADRD using machine learning.</li>
 			<li>05/2022, One paper on class-imbalanced domain adaptation is accepted at <a href="https://kdd.org/kdd2022/" target="_blank">KDD 2022</a>.</li>    
 			<li>05/2022, My PhD student Zhongliang Zhou received the Outstanding Graduate Student Award</a> from CS department.</li>  
 			<li>04/2022, One paper on knowledge-infused agricultural language models is accepted at <a href="https://ijcai-22.org/" target="_blank">IJCAI 2022</a> (AI for Good Track).</li>  
