--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="col-md-12">
           <ul class="">
             <li>
-              <b>Panelist</b>: NSF, CDC</li>  
+              <b>Panelist</b>: NSF (III, NAIRI, CRII, GRFP), CDC</li>  
             <li>
               <b>Associate Editor</b>: IEEE Trans. Neural Networks and Learning Systems (2022 - ), IEEE Transactions on Circuits and Systems for Video Technology (2021 - ), IEEE Computational Intelligence Magazine (2019 - ), Neurocomputing (2017 - 2022), Journal of Electronic Imaging (2018 - 2022), IET Image Processing (2017 - 2020)</li>
 			<li>
