--- a/about.html
+++ b/about.html
@@ -47,22 +47,17 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p class="">I received my B.S. degree in Computer Science (2010) and M.S. degree in Information Security (2012) from Nanjing University of Posts and Telecommunications (NUPT), China, and received my Ph.D. degree in Computer Engineering (2017) from Northeastern
-            University, Boston, MA.
-            <br>
-            <br>From 2017-2018, I worked as a Data Scientist at the Big Data Experience Lab,
-            <a href="https://research.adobe.com/">Adobe Research</a>, San Jose, CA.
-            <br>
-            <br>From 2012-2017, I worked as a Research Assistant in the
-            <a href="http://www.northeastern.edu/smilelab/">SMILE Lab</a> at Northeastern University, advised by
-            <a href="http://www.ece.neu.edu/~yunfu">Prof. Yun (Raymond) Fu</a>.&nbsp;
-            <br>
-            <br>In Summer 2014 and 2015, I was a Data Scientist Intern at Adobe Research, working with Dr.
-            <a href="https://scholar.google.com/citations?user=45HA9qMAAAAJ&amp;hl=en">Jaya Kawale</a> and Dr.
-            <a href="#">Nikos Vlassis</a> on user behavior prediction and causal inference models for digital marketing.&nbsp;
-            <br>
-            <br>From 2007 to 2012, I was a Research Assistant in the Pattern Recognition Lab at Nanjing University of Posts and Telecommunications, working with Prof.
-            <a href="http://coa.njupt.edu.cn/prase/2016/0616/c7503a82846/page.htm">Xiaoyuan Jing</a> on pattern recognition and biometrics.&nbsp;</p>
+          <p class="">Sheng Li is an Assistant Professor of Data Science at the University of Virginia (UVA). Prior to joining UVA, 
+		  he was an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, and a Data Scientist 
+		  in Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from Northeastern University 
+		  in 2017 under the supervision of Prof. Yun Raymond Fu. He received his Master degree and Bachelor degree from School 
+		  of Computer Science at Nanjing University of Posts and Telecommunications in 2012 and 2010, respectively. 
+		  His recent research interests include trustworthy representation learning, graph neural networks, visual intelligence, 
+		  and causal inference. He has published over 120 papers, and has received over 10 research awards, such as the INNS 
+		  Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, 
+		  and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural 
+		  Networks and Learning Systems and IEEE Trans. Circuits and Systems for Video Technology, and has served as an Area Chair 
+		  for NeurIPS and ICLR.</p>
         </div>
       </div>
     </div>
