--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
-		  	<li>08/2022, I accepted the invitation to serve as Tutorial Chair and Senior Committee Member of <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>, and Area Chair of <a href="https://iclr.cc/" target="_blank">ICLR 2023</a>.</li>
+		  	<li>08/2022, I accepted the invitations to serve as Tutorial Co-Chair and Senior Program Committee Member of <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>, and Area Chair of <a href="https://iclr.cc/" target="_blank">ICLR 2023</a>.</li>
 		  	<li>08/2022, Two papers are accepted at <a href="https://www.cikm2022.org/" target="_blank">ACM CIKM 2022</a>; One paper is accepted at <a href="https://sites.google.com/view/mlmi2022/" target="_blank">MICCAI-MLMI 2022</a>.</li>
 		  	<li>07/2022, Received an <strong>NIH U01 Grant</strong> (as Co-I; PI: Prof. Natarajan Kannan) to annotate dark ion-channel functions by language modeling.</li>  
 		  	<li>06/2022, Received an <strong>NIH Supplement Grant</strong> (as Co-I; PI: Prof. Donglan Zhang) to examine disparities in ADRD using machine learning.</li>
