--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
+		  	<li>09/2022, One paper on causality guided model interpretation is accepted by IEEE Transactions on Knowledge and Data Engineering (TKDE).</li>
 		  	<li>08/2022, Received a <strong>HHS R01 Grant</strong> (as Co-I; PI: Prof. Andrea Sikora) to develop AI based health IT tools to assist critical care pharmacists.</li>
 		  	<li>08/2022, I accepted the invitations to serve as Tutorial Co-Chair and Senior PC member for <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>, and Area Chair for <a href="https://iclr.cc/" target="_blank">ICLR 2023</a>.</li>
 		  	<li>08/2022, Two papers are accepted at <a href="https://www.cikm2022.org/" target="_blank">ACM CIKM 2022</a>; One paper is accepted at <a href="https://sites.google.com/view/mlmi2022/" target="_blank">MICCAI-MLMI 2022</a>.</li>
@@ -191,11 +192,13 @@
 			 <b>Editorial Board Member</b>: Frontiers in Signal Processing (2021 - ), Neural Computing and Applications (2017 - )</li>
             <li><b>Program Chair</b>: <a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank">CVPR-AMFG</a> (2021), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2020.html" target="_blank">IJCAI-Tusion</a> (2020), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2019.html" target="_blank">IJCAI-Tusion</a> (2019), <a href="https://web.northeastern.edu/smilelab/amfg2019/" target="_blank">CVPR-AMFG</a> (2019)</li>
             <li>
+              <b>Tutorial Chair</b>: SDM (2023)</li>
+	    <li>
               <b>Publicity Chair</b>: ICMLA (2016), TCMFTL (2016), AMFG (2015-2017)</li>
             <li>
-              <b>Area Chair</b>: NeurIPS (2022), ICLR (2022), ICPR (2020-2022), VCIP (2017)</li>
+              <b>Area Chair</b>: NeurIPS (2022), ICLR (2022-2023), ICPR (2020-2022), VCIP (2017)</li>
             <li>
-              <b>SPC Member</b>: IJCAI (2020-2021), AAAI (2019-2022)</li>
+              <b>SPC Member</b>: IJCAI (2020-2021), AAAI (2019-2022), SDM (2023)</li>
             </ul>
         </div>
 	</div>
