--- a/publications.html
+++ b/publications.html
@@ -75,7 +75,7 @@
               <i>Low-Rank and Sparse Modeling for Visual Analysis</i>, Springer, 2014.</li>
           </ol>
           <p class="">
-            <b>Journal Papers</b>&nbsp;(<b><i>2 IEEE TPAMI, 6 IEEE TNNLS, 3 IEEE TKDE, 3 IEEE TIP, 3 IEEE TCSVT, 3 ACM TKDD, 1 ACM TOMM, 1 IEEE TETCI, 1 DMKD, 1 Nature Communications, 1 eLife, 1 BMC Bioinformatics, 1 ISJ, 1 NN, and 1 MTA</i></b>)</p>
+            <b>Journal Papers</b>&nbsp;(<b><i>2 IEEE TPAMI, 6 IEEE TNNLS, 4 IEEE TKDE, 3 IEEE TIP, 3 IEEE TCSVT, 3 ACM TKDD, 1 ACM TOMM, 1 IEEE TETCI, 1 DMKD, 1 Nature Communications, 1 eLife, 1 BMC Bioinformatics, 1 ISJ, 1 NN, and 1 MTA</i></b>)</p>
 		<p class="">	
         <b>Conference Papers</b>
         <i>(<b>2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 8 CIKM, 6 SDM, 5 ICDM, 3 SIGIR, 3 IEEE BigData, 1 ICLR, 1 ICCV, 1 CVPR, 1 ECCV, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
@@ -84,6 +84,7 @@
           <ol class="">
 			  
 			<b>2022</b>
+		  	<li>Liuyi Yao, Yaliang Li, <b>Sheng Li</b>, Jinduo Liu, Mengdi Huai, Aidong Zhang, and Jing Gao. Concept-Level Model Interpretation from the Causal Aspect. <i>IEEE Trans. Knowledge and Data Engineering (<b>T-KDE</b>)</i>, 2022.</li>
 			<li>Weili Shi, Ronghang Zhu, and <b>Sheng Li</b>. Pairwise Adversarial Training for Unsupervised Class-imbalanced Domain Adaptation. <i>The 28th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (<b>SIGKDD</b>)</i>, 2022.</li>
 			<li>Ronghang Zhu and <b>Sheng Li</b>. CrossMatch: Cross-Classifier Consistency Regularization for Open-Set Single Domain Generalization. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2022.</li>
 			<li>Saed Rezayi, Zhengliang Liu, Zihao Wu, Chandra Dhakal, Bao Ge, Chen Zhen, Tianming Liu, and <b>Sheng Li</b>. AgriBERT: Knowledge-Infused Agricultural Language Models for Matching Food and Nutrition. <em>The 31st International Joint Conference on Artificial Intelligence (<strong>IJCAI</strong>)</em>, 2022.</li>
