--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<br>Email: shengli [AT] virginia.edu</p>
 	</div>
       <div class="col-md-2 mx-3">
-        <img class="img-fluid d-block" src="Pics/ShengLi2019.png"> </div>
+        <img class="img-fluid d-block" src="Pics/ShengLi_2022.png"> </div>
     </div>
   </div>
   <!-- Bootstrap core JavaScript -->
