--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
   <!-- Page Content -->
   <div class="container">
     <div class="row my-2">
-      <div class="col-md-2">
-	      <img class="img-fluid d-block my-5" src="Pics/UVA_logo.png"> </div>
-      <div class="text-center col-lg-7">
+      <div class="col-md-3">
+	      <img class="img-fluid d-block my-5" src="Pics/UVA-SDS-V-Logo.png"> </div>
+      <div class="text-center col-lg-6">
 	      	<h2 contenteditable="false" class="my-4">Sheng Li</h2>
 		<p class="lead w-100 my-3">Assistant Professor, <a href="http://datascience.virginia.edu" target="_blank">School of Data Science</a></p>
 		<p class="">178 Elson, University of Virginia, Charlottesville, VA 22903
 		<br>Email: shengli [AT] virginia.edu</p>
 	</div>
-      <div class="col-md-2 mx-3">
+      <div class="col-md-3">
         <img class="img-fluid d-block" src="Pics/ShengLi_2022.png"> </div>
     </div>
   </div>
