--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
+		  	<li>09/2022, I will co-organize a tutorial (Machine Learning for Causal Inference) and a workshop (<a href="https://ai4webads2023.github.io/" target="_blank">AI for Web Ads</a>) at <a href="https://aaai.org/Conferences/AAAI-23/" target="_blank">AAAI 2023</a>.</li> 
+		  	<li>09/2022, Received the <a href="https://research.adobe.com/data-science-research-awards/" target="_blank">Adobe Data Science Research Award</a>.</li>
 		  	<li>09/2022, One paper on causality guided model interpretation is accepted by IEEE Trans. Knowledge and Data Engineering (TKDE).</li>
 		  	<li>08/2022, Received a <strong>HHS R01 Grant</strong> (as Co-I; PI: Prof. Andrea Sikora) to develop AI based health IT tools to assist critical care pharmacists.</li>
 		  	<li>08/2022, I accepted the invitations to serve as Tutorial Co-Chair and Senior PC member for <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>, and Area Chair for <a href="https://iclr.cc/" target="_blank">ICLR 2023</a>.</li>
