--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
+		  	<li>10/2022, One paper on knowledge-guided scene graph generation is accepted at <a href="https://wacv2023.thecvf.com/" target="_blank">WACV 2023</a>.</li>
 		  	<li>09/2022, I will co-organize a tutorial (Machine Learning for Causal Inference) and a workshop (<a href="https://ai4webads2023.github.io/" target="_blank">AI for Web Ads</a>) at <a href="https://aaai.org/Conferences/AAAI-23/" target="_blank">AAAI 2023</a>.</li> 
 		  	<li>09/2022, Received the <a href="https://research.adobe.com/data-science-research-awards/" target="_blank">Adobe Data Science Research Award</a>.</li>
 		  	<li>09/2022, One paper on causality guided model interpretation is accepted by IEEE Trans. Knowledge and Data Engineering (TKDE).</li>
@@ -194,7 +195,7 @@
 			 <b>Editorial Board Member</b>: Frontiers in Signal Processing (2021 - ), Neural Computing and Applications (2017 - )</li>
             <li><b>Program Chair</b>: <a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank">CVPR-AMFG</a> (2021), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2020.html" target="_blank">IJCAI-Tusion</a> (2020), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2019.html" target="_blank">IJCAI-Tusion</a> (2019), <a href="https://web.northeastern.edu/smilelab/amfg2019/" target="_blank">CVPR-AMFG</a> (2019)</li>
             <li>
-              <b>Tutorial Chair</b>: SDM (2023)</li>
+              <b>Tutorial Co-Chair</b>: SDM (2023)</li>
 	    <li>
               <b>Publicity Chair</b>: ICMLA (2016), TCMFTL (2016), AMFG (2015-2017)</li>
             <li>
