--- a/publications.html
+++ b/publications.html
@@ -82,8 +82,11 @@
 		</p>
            
           <ol class="">
-			  
-			<b>2022</b>
+			<b>2023</b>
+		  	<li>Zhanwen Chen, Saed Rezayi, <b>Sheng Li</b>. More Knowledge, Less Bias: Unbiasing Scene Graph Generation with Explicit Ontological Adjustment. <i>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>)</i>, 2023.</li>
+		  	<p></p>
+			
+		  	<b>2022</b>
 		  	<li>Liuyi Yao, Yaliang Li, <b>Sheng Li</b>, Jinduo Liu, Mengdi Huai, Aidong Zhang, and Jing Gao. Concept-Level Model Interpretation from the Causal Aspect. <i>IEEE Trans. Knowledge and Data Engineering (<b>T-KDE</b>)</i>, 2022.</li>
 			<li>Weili Shi, Ronghang Zhu, and <b>Sheng Li</b>. Pairwise Adversarial Training for Unsupervised Class-imbalanced Domain Adaptation. <i>The 28th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (<b>SIGKDD</b>)</i>, 2022.</li>
 			<li>Ronghang Zhu and <b>Sheng Li</b>. CrossMatch: Cross-Classifier Consistency Regularization for Open-Set Single Domain Generalization. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2022.</li>
