--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
-		  	<li>10/2022, One paper on knowledge-guided scene graph generation is accepted at <a href="https://wacv2023.thecvf.com/" target="_blank">WACV 2023</a>.</li>
+		  	
+		  	<li>10/2022, One paper on scene graph generation is accepted at <a href="https://wacv2023.thecvf.com/" target="_blank">WACV 2023</a>; One paper on robust vision transformer is accepted at <a href="https://bigdataieee.org/BigData2022/" target="_blank">IEEE BigData 2022</a>.</li>
 		  	<li>09/2022, I will co-organize a tutorial (Machine Learning for Causal Inference) and a workshop (<a href="https://ai4webads2023.github.io/" target="_blank">AI for Web Ads</a>) at <a href="https://aaai.org/Conferences/AAAI-23/" target="_blank">AAAI 2023</a>.</li> 
 		  	<li>09/2022, Received the <a href="https://research.adobe.com/data-science-research-awards/" target="_blank">Adobe Data Science Research Award</a>.</li>
 		  	<li>09/2022, One paper on causality guided model interpretation is accepted by IEEE Trans. Knowledge and Data Engineering (TKDE).</li>
