--- a/publications.html
+++ b/publications.html
@@ -78,7 +78,7 @@
             <b>Journal Papers</b>&nbsp;(<b><i>2 IEEE TPAMI, 6 IEEE TNNLS, 4 IEEE TKDE, 3 IEEE TIP, 3 IEEE TCSVT, 3 ACM TKDD, 1 ACM TOMM, 1 IEEE TETCI, 1 DMKD, 1 Nature Communications, 1 eLife, 1 BMC Bioinformatics, 1 ISJ, 1 NN, and 1 MTA</i></b>)</p>
 		<p class="">	
         <b>Conference Papers</b>
-        <i>(<b>2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 8 CIKM, 6 SDM, 5 ICDM, 3 SIGIR, 3 IEEE BigData, 1 ICLR, 1 ICCV, 1 CVPR, 1 ECCV, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
+        <i>(<b>2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 8 CIKM, 6 SDM, 5 ICDM, 3 SIGIR, 4 IEEE BigData, 1 ICLR, 1 ICCV, 1 CVPR, 1 ECCV, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
 		</p>
            
           <ol class="">
@@ -98,6 +98,7 @@
 			<li>Zhixuan Chu, Stephen Rathbun and <b>Sheng Li</b>. Multi-Task Adversarial Learning for Treatment Effect Estimation in Basket Trials. <em>AHLI Conference on Health, Inference and Learning (<strong>CHIL</strong>)</em>, 2022.</li>
 		  	<li>Zhixuan Chu, Hui Ding, Guang Zeng, Yuchen Huang, Tan Yan, Yulin Kang and <b>Sheng Li</b>. Hierarchical Capsule Prediction Network for Marketing Campaigns Effect. <em>The 31st ACM International Conference on Information and Knowledge Management (<strong>ACM CIKM</strong>)</em>, 2022.</li>
 		  	<li>Xueying Yang, Jiamian Wang, Xujiang Zhao, <b>Sheng Li</b> and Zhiqiang Tao. Calibrate Automated Graph Neural Network via Hyperparameter Uncertainty. <em>The 31st ACM International Conference on Information and Knowledge Management (<strong>ACM CIKM</strong>)</em>, 2022.</li>
+		  <li>Weili Shi and <b>Sheng Li</b>. Improving Robustness of Vision Transformers via Data-Augmented Virtual Adversarial Training. <em>IEEE International Conference on Big Data (<strong>IEEE BigData</strong>)</em>, 2022.</li>
 		  	<li>Saed Rezayi, Haixing Dai, Zhengliang Liu, Zihao Wu, Akarsh Hebbar, Andrew H. Burns, Lin Zhao, Dajiang Zhu, Xiang Li, Quanzheng Li, Wei Liu, <b>Sheng Li</b>, Tianming Liu. ClinicalRadioBERT: Knowledge-Infused Few Shot Learning for Clinical Notes Named Entity Recognition. <em>International Workshop on Machine Learning in Medical Imaging (in conjunction with MICCAI)</em>, 2022.</li>
 		   <p></p>
 		   
