--- a/index.html
+++ b/index.html
@@ -78,7 +78,17 @@
       <div class="row">
         <div class="col-md-12">
           <p class="">
-            <b class="text-capitalize">Background</b>: Sheng Li is an Assistant Professor of <a href="http://datascience.virginia.edu" target="_blank">Data Science</a> at the University of Virginia (UVA). Prior to joining UVA, he was an Assistant Professor of <a href="https://computing.uga.edu/" target="_blank">Computer Science</a> at the University of Georgia from 2018 to 2022, and a Data Scientist in <a href="https://research.adobe.com/" target="_blank">Adobe Research</a> from 2017 to 2018. He received his PhD degree in Computer Engineering from Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications in 2012 and 2010, respectively.</p>
+            <b class="text-capitalize">Short Bio</b>: Sheng Li is an Assistant Professor of <a href="http://datascience.virginia.edu" target="_blank">Data Science</a> at 
+		  the University of Virginia (UVA). 
+		  Prior to joining UVA, he was an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, 
+		  and a Data Scientist in Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from 
+		  Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. 
+		  He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications 
+		  in 2012 and 2010, respectively. His recent research interests include trustworthy representation learning, graph neural networks, 
+		  visual intelligence, and causal inference. He has published over 120 papers, and has received over 10 research awards, 
+		  such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, 
+		  and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural Networks and Learning 
+		  Systems and IEEE Trans. Circuits and Systems for Video Technology, and has served as an Area Chair for NeurIPS and ICLR.</p>
         </div>
       </div>
     </div>
