--- a/index.html
+++ b/index.html
@@ -78,17 +78,10 @@
       <div class="row">
         <div class="col-md-12">
           <p class="">
-            <b class="text-capitalize">Short Bio</b>: Sheng Li is an Assistant Professor of <a href="http://datascience.virginia.edu" target="_blank">Data Science</a> at 
-		  the University of Virginia (UVA). 
-		  Prior to joining UVA, he was an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, 
-		  and a Data Scientist in Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from 
-		  Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. 
-		  He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications 
-		  in 2012 and 2010, respectively. His recent research interests include trustworthy representation learning, graph neural networks, 
-		  visual intelligence, and causal inference. He has published over 120 papers, and has received over 10 research awards, 
-		  such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, 
-		  and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural Networks and Learning 
-		  Systems and IEEE Trans. Circuits and Systems for Video Technology, and has served as an Area Chair for NeurIPS and ICLR.</p>
+            <span style="color:red;">
+              <b>Openings</b>: I am continuously looking for highly-motivated Ph.D. students to work on machine learning, computer vision and causal inference. Please send me your CV if interested.
+            </span>
+          </p>
         </div>
       </div>
     </div>
@@ -98,14 +91,22 @@
       <div class="row">
         <div class="col-md-12">
           <p class="">
-            <span style="color:red;">
-              <b>Openings</b>: I am continuously looking for highly-motivated Ph.D. students to work on machine learning, computer vision and causal inference. Please send me your CV if interested.
-            </span>
-          </p>
+            <b class="text-capitalize">Short Bio</b>: Sheng Li is an Assistant Professor of <a href="http://datascience.virginia.edu" target="_blank">Data Science</a> at 
+		  the University of Virginia (UVA). 
+		  Prior to joining UVA, he was an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, 
+		  and a Data Scientist at Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from 
+		  Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. 
+		  He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications 
+		  in 2012 and 2010, respectively. His recent research interests include trustworthy representation learning, graph neural networks, 
+		  visual intelligence, and causal inference. He has published over 120 papers, and has received over 10 research awards, 
+		  such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, Cisco Faculty Research Award,
+		  and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural Networks and Learning 
+		  Systems (TNNLS) and IEEE Trans. Circuits and Systems for Video Technology (TCSVT), and has served as an Area Chair for NeurIPS and ICLR.</p>
         </div>
       </div>
     </div>
   </div>
+  
   <div class="py-0">
     <div class="container">
       <div class="row">
