--- a/publications.html
+++ b/publications.html
@@ -78,7 +78,7 @@
             <b>Journal Papers</b>&nbsp;(<b><i>2 IEEE TPAMI, 6 IEEE TNNLS, 4 IEEE TKDE, 3 IEEE TIP, 3 IEEE TCSVT, 3 ACM TKDD, 1 ACM TOMM, 1 IEEE TETCI, 1 DMKD, 1 Nature Communications, 1 eLife, 1 BMC Bioinformatics, 1 ISJ, 1 NN, and 1 MTA</i></b>)</p>
 		<p class="">	
         <b>Conference Papers</b>
-        <i>(<b>2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 8 CIKM, 6 SDM, 5 ICDM, 3 SIGIR, 4 IEEE BigData, 1 ICLR, 1 ICCV, 1 CVPR, 1 ECCV, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
+        <i>(<b>2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 8 CIKM, 6 SDM, 5 ICDM, 3 SIGIR, 5 IEEE BigData, 1 ICLR, 1 ICCV, 1 CVPR, 1 ECCV, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
 		</p>
            
           <ol class="">
@@ -91,16 +91,17 @@
 			<li>Weili Shi, Ronghang Zhu, and <b>Sheng Li</b>. Pairwise Adversarial Training for Unsupervised Class-imbalanced Domain Adaptation. <i>The 28th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (<b>SIGKDD</b>)</i>, 2022.</li>
 			<li>Ronghang Zhu and <b>Sheng Li</b>. CrossMatch: Cross-Classifier Consistency Regularization for Open-Set Single Domain Generalization. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2022.</li>
 			<li>Saed Rezayi, Zhengliang Liu, Zihao Wu, Chandra Dhakal, Bao Ge, Chen Zhen, Tianming Liu, and <b>Sheng Li</b>. AgriBERT: Knowledge-Infused Agricultural Language Models for Matching Food and Nutrition. <em>The 31st International Joint Conference on Artificial Intelligence (<strong>IJCAI</strong>)</em>, 2022.</li>
-		    <li>Ronghang Zhu and <b>Sheng Li</b>. Self-supervision based Semantic Alignment for Unsupervised Domain Adaptation. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2022.</li>  
-		    <li>Zhixuan, Chu, Stephen Rathbun, and <b>Sheng Li</b>. Learning Infomax and Domain-Independent Representations for Causal Effect Inference with Observational Data. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2022.</li>
-		    <li>Yue Bai, Zhiqiang Tao, Lichen Wang, <b>Sheng Li</b>, Yu Yin, and Yun Fu. Collaborative Attention Mechanism for Multi-Modal Time Series Classification. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2022.</li>
+		    	<li>Ronghang Zhu and <b>Sheng Li</b>. Self-supervision based Semantic Alignment for Unsupervised Domain Adaptation. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2022.</li>  
+		    	<li>Zhixuan, Chu, Stephen Rathbun, and <b>Sheng Li</b>. Learning Infomax and Domain-Independent Representations for Causal Effect Inference with Observational Data. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2022.</li>
+		    	<li>Yue Bai, Zhiqiang Tao, Lichen Wang, <b>Sheng Li</b>, Yu Yin, and Yun Fu. Collaborative Attention Mechanism for Multi-Modal Time Series Classification. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2022.</li>
 		 	<li>Saed Rezayi, Handong Zhao and <b>Sheng Li</b>. XDC: Adversarial Adaptive Cross Domain Face Clustering. <em>The Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>)</em>, 2022. (Poster)</li>
 			<li>Zhixuan Chu, Stephen Rathbun and <b>Sheng Li</b>. Multi-Task Adversarial Learning for Treatment Effect Estimation in Basket Trials. <em>AHLI Conference on Health, Inference and Learning (<strong>CHIL</strong>)</em>, 2022.</li>
 		  	<li>Zhixuan Chu, Hui Ding, Guang Zeng, Yuchen Huang, Tan Yan, Yulin Kang and <b>Sheng Li</b>. Hierarchical Capsule Prediction Network for Marketing Campaigns Effect. <em>The 31st ACM International Conference on Information and Knowledge Management (<strong>ACM CIKM</strong>)</em>, 2022.</li>
 		  	<li>Xueying Yang, Jiamian Wang, Xujiang Zhao, <b>Sheng Li</b> and Zhiqiang Tao. Calibrate Automated Graph Neural Network via Hyperparameter Uncertainty. <em>The 31st ACM International Conference on Information and Knowledge Management (<strong>ACM CIKM</strong>)</em>, 2022.</li>
-		  <li>Weili Shi and <b>Sheng Li</b>. Improving Robustness of Vision Transformers via Data-Augmented Virtual Adversarial Training. <em>IEEE International Conference on Big Data (<strong>IEEE BigData</strong>)</em>, 2022.</li>
+		  	<li>Weili Shi and <b>Sheng Li</b>. Improving Robustness of Vision Transformers via Data-Augmented Virtual Adversarial Training. <em>IEEE International Conference on Big Data (<strong>IEEE BigData</strong>)</em>, 2022.</li>
+		  	<li>Zhongliang Zhou, Nathaniel Hitt, Benjamin Letcher, Weili Shi, and <b>Sheng Li</b>. Pigmentation-based Visual Learning for Salvelinus fontinalis Individual Re-identification. <em>IEEE International Conference on Big Data (<strong>IEEE BigData</strong>)</em>, 2022.</li> 
 		  	<li>Saed Rezayi, Haixing Dai, Zhengliang Liu, Zihao Wu, Akarsh Hebbar, Andrew H. Burns, Lin Zhao, Dajiang Zhu, Xiang Li, Quanzheng Li, Wei Liu, <b>Sheng Li</b>, Tianming Liu. ClinicalRadioBERT: Knowledge-Infused Few Shot Learning for Clinical Notes Named Entity Recognition. <em>International Workshop on Machine Learning in Medical Imaging (in conjunction with MICCAI)</em>, 2022.</li>
-		   <p></p>
+		  <p></p>
 		   
 			<b>2021</b>
 			<li>Rahil Taujale*, Zhongliang Zhou*, Wayland Yeung, Kelley Moremen, <b>Sheng Li</b>, and Natarajan Kannan. Mapping the glycosyltransferase fold landscape using interpretable deep learning. <em><strong>Nature Communications</strong></em>, 2021. (* indicates equal contribution)</li>
