--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		  visual intelligence, and causal inference. He has published over 120 papers, and has received over 10 research awards, 
 		  such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, Cisco Faculty Research Award,
 		  and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural Networks and Learning 
-		  Systems (TNNLS) and IEEE Trans. Circuits and Systems for Video Technology (TCSVT), and has served as an Area Chair for NeurIPS and ICLR.</p>
+		  Systems (TNNLS) and IEEE Trans. Circuits and Systems for Video Technology (TCSVT), and has served as an Area Chair for NeurIPS, IJCAI and ICLR.</p>
         </div>
       </div>
     </div>
@@ -125,8 +125,8 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
-		  	
-		  	<li>10/2022, One paper on scene graph generation is accepted at <a href="https://wacv2023.thecvf.com/" target="_blank">WACV 2023</a>; One paper on vision transformer is accepted at <a href="https://bigdataieee.org/BigData2022/" target="_blank">IEEE BigData 2022</a>.</li>
+		  	<li>11/2022, I accepted the invitation to serve as Area Chair for <a href="https://ijcai-23.org/" target="_blank">IJCAI 2023</a>.</li>
+		  	<li>10/2022, One paper on scene graph generation is accepted at <a href="https://wacv2023.thecvf.com/" target="_blank">WACV 2023</a>; Two papers on visual learning are accepted at <a href="https://bigdataieee.org/BigData2022/" target="_blank">IEEE BigData 2022</a>.</li>
 		  	<li>09/2022, I will co-organize a tutorial (Machine Learning for Causal Inference) and a workshop (<a href="https://ai4webads2023.github.io/" target="_blank">AI for Web Ads</a>) at <a href="https://aaai.org/Conferences/AAAI-23/" target="_blank">AAAI 2023</a>.</li> 
 		  	<li>09/2022, Received the <a href="https://research.adobe.com/data-science-research-awards/" target="_blank">Adobe Data Science Research Award</a>.</li>
 		  	<li>09/2022, One paper on causality guided model interpretation is accepted by IEEE Trans. Knowledge and Data Engineering (TKDE).</li>
@@ -211,7 +211,7 @@
 	    <li>
               <b>Publicity Chair</b>: ICMLA (2016), TCMFTL (2016), AMFG (2015-2017)</li>
             <li>
-              <b>Area Chair</b>: NeurIPS (2022), ICLR (2022-2023), ICPR (2020-2022), VCIP (2017)</li>
+              <b>Area Chair</b>: IJCAI (2023), NeurIPS (2022), ICLR (2022-2023), ICPR (2020-2022), VCIP (2017)</li>
             <li>
               <b>SPC Member</b>: IJCAI (2020-2021), AAAI (2019-2022), SDM (2023)</li>
             </ul>
