--- a/news.html
+++ b/news.html
@@ -57,7 +57,22 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
-			
+			<li>12/2021, I receive the <a href="https://research.uga.edu/iga/awards/#1485956970033-d7774ff4-63ff" target="_blank">Fred C. Davidson Early Career Scholar Award</a>.</li>   
+			<li>12/2021, Three papers on causal inference, unsupervised domain adaptation, and multi-modal learning are accepted at <a href="https://www.siam.org/conferences/cm/conference/sdm22" target="_blank">SDM 2022</a>.</li> 
+			<li>10/2021, Three paper are accepted to IEEE T-NNLS, <a href="https://bigdataieee.org/BigData2021/" target="_blank">IEEE BigData 2021</a>, and <a href="https://aaai.org/Conferences/AAAI-22/" target="_blank">AAAI 2022</a> (Student Poster).</li>  
+			<li>08/2021, One paper is accepted by <a href="https://www.nature.com/articles/s41467-021-25975-9"target="_blank">Nature Communications</a>; Three papers are accepted at <a href="https://icdm2021.auckland.ac.nz/" target="_blank">IEEE ICDM 2021</a> and <a href="https://www.cikm2021.org/" target="_blank">ACM CIKM 2021</a>.</li>
+			<li>08/2021, I gave a keynote talk at the <a href="https://cmliot2021.github.io/" target="_blank">3rd Workshop on Continual and Multimodal Learning for Internet of Things</a> (Co-located with IJCAI 2021).</li>
+			<li>05/2021, Two papers are accepted at <a href="https://www.kdd.org/kdd2021/" target="_blank">ACM SIGKDD 2021</a> and IEEE T-NNLS.</li>
+			<li>05/2021, My PhD students Saed Rezayi and Ronghang Zhu received the <a href="https://www.cs.uga.edu/news/stories/2021/congratulations-2020-2021-cs-student-award-recipients" target="_blank">Excellent Graduate Students Research Awards</a> from CS department.</li>  
+			<li>05/2021, I received the <a href="https://www.cs.uga.edu/news/stories/2021/congratulations-2020-2021-cs-department-award-recipients" target="_blank">Faculty Teaching Excellence Award</a> from the Department of Computer Science.</li>
+			<li>04/2021, Two papers on self-tuning GCN and pose image generation are accepted at <a href="https://www.sigir.org/sigir2021/" target="_blank">ACM SIGIR 2021</a> and <a href="http://icmr2021.org/" target="_blank">ACM ICMR 2021</a>.</li>  
+			<li>03/2021, I will co-organize <a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank">The 10th IEEE International Workshop on Analysis and Modeling of Faces and Gestures (AMFG)</a>, at CVPR 2021.</li> 
+			<li>03/2021, Three papers are accepted at <a href="https://2021.naacl.org/" target="_blank">NAACL 2021</a>, <a href="https://2021.ieeeicme.org/" target="_blank">IEEE ICME 2021</a>, and <a href="https://mipr2021.org/" target="_blank">IEEE MIPR 2021</a>.</li> 
+			<li>02/2021, Received a <strong>Cisco Gift Grant</strong> (Sole PI) to support our research on fair machine learning.</li>   
+			<li>02/2021, Received an <strong>ARO Grant</strong> (Sole PI) to support our research on graph reasoning and visual understanding.</li>  
+			<li>12/2020, Our survey paper on causal inference is accepted by <a href="https://dl.acm.org/doi/10.1145/3444944" target="_blank">ACM TKDD</a>; One paper on multi-view learning is accepted at <a href="https://ijcai20.org/" target="_blank">AAAI 2021</a>.</li>  
+			<li>12/2020, I accepted the invitation to serve as Associate Editor for IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT).</li> 
+			<li>12/2020, Received a <strong>DoD Grant</strong> (Sole PI) to support our research on representation learning and visual understanding.</li>
 			<li>10/2020, One paper on protein kinase inhibitor response prediction is accepted by BMC Bioinformatics.</li>
 			<li>09/2020, One paper on co-embedding of nodes and edges with graph neural networks is accepted by IEEE Trans. PAMI.</li>  
 			<li>08/2020, One paper on graph embedding for session-based news recommendation is accepted at <a href="https://recsys.acm.org/recsys20/" target="_blank">ACM RecSys 2020</a>.</li>   
