--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
-		  	<li>12/2022, Three papers are accepted at Briefings in Bioinformatics, AAAI-23 <a href="https://www.continualcausality.org/" target="_blank">Bridge Program on Continual Causality</a>, and <a href="https://icaart.scitevents.org/" target="_blank">ICAART 2023</a>.
+		  	<li>12/2022, Four papers are accepted at <a href="https://icde2023.ics.uci.edu/" target="_blank">ICDE 2023</a>, Briefings in Bioinformatics, AAAI-23 <a href="https://www.continualcausality.org/" target="_blank">Continual Causality Program</a>, and <a href="https://icaart.scitevents.org/" target="_blank">ICAART 2023</a>.
 		  	<li>11/2022, I accepted the invitation to serve as Area Chair for <a href="https://ijcai-23.org/" target="_blank">IJCAI 2023</a>.</li>
 		  	<li>10/2022, One paper on scene graph generation is accepted at <a href="https://wacv2023.thecvf.com/" target="_blank">WACV 2023</a>; Two papers on visual learning are accepted at <a href="https://bigdataieee.org/BigData2022/" target="_blank">IEEE BigData 2022</a>.</li>
 		  	<li>09/2022, I will co-organize a tutorial (Machine Learning for Causal Inference) and a workshop (<a href="https://ai4webads2023.github.io/" target="_blank">AI for Web Ads</a>) at <a href="https://aaai.org/Conferences/AAAI-23/" target="_blank">AAAI 2023</a>.</li> 
