--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@
            
           <ol class="">
 			<b>2023</b>
-		  	<li>Zhixuan Chu, Ruopeng Li, Stephen Rathbun, and <b>Sheng Li</b>. ontinual Causal Inference with Incremental Observational Data. <i>The 39th IEEE International Conference on Data Engineering (<b>ICDE</b>)</i>, 2023.</li>
+		  	<li>Zhixuan Chu, Ruopeng Li, Stephen Rathbun, and <b>Sheng Li</b>. Continual Causal Inference with Incremental Observational Data. <i>The 39th IEEE International Conference on Data Engineering (<b>ICDE</b>)</i>, 2023.</li>
 		  	<li>Zhixuan Chu and <b>Sheng Li</b>. Continual Causal Inference: Challenges and Opportunities. <i>The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI) Bridge Program - Continual Causality</i>, 2023.</li>
 		  	<li>Zhanwen Chen, Saed Rezayi, <b>Sheng Li</b>. More Knowledge, Less Bias: Unbiasing Scene Graph Generation with Explicit Ontological Adjustment. <i>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>)</i>, 2023.</li>
 		  	<li>Hemadri Jayalath, Ghadeer Yassin, Lakshmish Ramaswamy, and <b>Sheng Li</b>. Continual Optimization of In-Production Machine Learning Systems through Semantic Analysis of User Feedback. <i>The 15th International Conference on Agents and Artificial Intelligence (<b>ICAART</b>)</i>, 2023.</li>
