--- a/group.html
+++ b/group.html
@@ -56,12 +56,14 @@
         <div class="col-md-12">
           <ul class="">
             <li><b>Seyedsaed Rezayidemne</b>, Spring 2019 - </li>
-			<li><b>Ronghang Zhu</b>, Fall 2019 - </li>  
-			<li><b>Zhongliang Zhou</b> (Co-advised with Dr. Natarajan Kannan), Spring 2020 - </li>
-			<li><b>Daiqing Qi</b>, Fall 2021 - </li> 
-			<li><b>Weili Shi</b>, Fall 2021 - </li> 
-			<li><b>Zhanwen Chen</b>, Fall 2021 - </li> 
-			<li><b>Dongliang Guo</b>, Fall 2021 - </li> 
+		<li><b>Ronghang Zhu</b>, Fall 2019 - </li>  
+		<li><b>Zhongliang Zhou</b> (Co-advised with Dr. Natarajan Kannan), Spring 2020 - </li>
+		<li><b>Yu Wang</b> (Statistics, Co-advised with Dr. Pengsheng Ji), Spring 2021 - </li>
+		<li><b>Daiqing Qi</b>, Fall 2021 - </li> 
+		<li><b>Weili Shi</b>, Fall 2021 - </li> 
+		<li><b>Zhanwen Chen</b>, Fall 2021 - </li> 
+		<li><b>Dongliang Guo</b>, Fall 2021 - </li>
+		<li><b>Mengxuan Hu</b>, Fall 2022 - </li>
           </ul>
         </div>
       </div>
@@ -72,9 +74,7 @@
             <b>Current MS Students</b>
           </p>
           <ul class="">
-			<li><b>Kushajveer Singh</b>, Spring 2021 - </li>
-			<li><b>Mitchell Buff</b>, Fall 2021 - </li>
-			<li><b>Junwen Fan</b>, Fall 2021 - </li>
+			
 			<li><b>Duna Zhan</b> (PhD Student in Statistics), Fall 2021 - </li>
 			<li><b>Yangjiaxin Wei</b> (PhD Student in Geography), Spring 2022 - </li>
 			<li><b>Zhaiming Shen</b> (PhD Student in Mathematics), Spring 2022 - </li>
@@ -85,10 +85,10 @@
       <div class="row">
         <div class="col-md-12">
           <p class="lead">
-            <b>Current Undergraduate Students</b>
+            <b>Undergraduate Students</b>
           </p>
           <ul class="">
-			<li><b>Andrew Hays Burns</b>, Summer 2021 - </li>
+			<li><b>Andrew Hays Burns</b>, Summer 2021 - Spring 2022</li>
           </ul>
         </div>
       </div>
@@ -108,6 +108,9 @@
 			<li><b>Zhixuan Chu</b> (Biostatistics, Co-advised with Dr. Stephen Rathbun), Spring 2019 - Spring 2021. First employment: Ant Financial.</li>  
 			<p></p>
 			<b>MS Students</b>
+		  	<li><b>Kushajveer Singh</b>, Spring 2021 - Summer 2022</li>
+			<li><b>Mitchell Buff</b>, Fall 2021 - Spring 2022</li>
+			<li><b>Junwen Fan</b>, Fall 2021 - Spring 2022</li>
 			<li><b>Akarsh Vasudeva Hebbar</b>, MS in CS, Summer 2021 - Fall 2021.</li>
 		    <li><b>Kranthimithra Rayapraju</b>, MS in CS, Spring 2021 - Summer 2021.</li>
 			<li><b>Matthew P. Pooser</b>, MS in CS, Fall 2020 - Spring 2021. First employment: Centers for Disease Control and Prevention.</li>
