--- a/publications.html
+++ b/publications.html
@@ -91,6 +91,7 @@
 			
 		  	<b>2022</b>
 		  	<li>Wayland Yeung*, Zhongliang Zhou*, <b>Sheng Li</b>, and Natarajan Kannan. Alignment-Free Estimation of Sequence Conservation for Identifying Functional Sites Using Protein Sequence Embeddings. <i>Briefings in Bioinformatics</i>, 2022. (* indicates equal contribution)</li>
+		  	<li>Wayland Yeung*, Zhongliang Zhou*, Liju Mathew, Nathan Gravel, Rahil Taujale, Brady O’Boyle, Mariah Salcedo, Aarya Venkat, William Lanzilotta, <b>Sheng Li</b>, and Natarajan Kannan. Tree Visualizations of Protein Sequence Embedding Space Enable Improved Functional Clustering of Diverse Protein Superfamilies. <i>Briefings in Bioinformatics</i>, 2022. (* indicates equal contribution)</li>
 		  	<li>Liuyi Yao, Yaliang Li, <b>Sheng Li</b>, Jinduo Liu, Mengdi Huai, Aidong Zhang, and Jing Gao. Concept-Level Model Interpretation from the Causal Aspect. <i>IEEE Trans. Knowledge and Data Engineering (<b>T-KDE</b>)</i>, 2022.</li>
 			<li>Weili Shi, Ronghang Zhu, and <b>Sheng Li</b>. Pairwise Adversarial Training for Unsupervised Class-imbalanced Domain Adaptation. <i>The 28th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (<b>SIGKDD</b>)</i>, 2022.</li>
 			<li>Ronghang Zhu and <b>Sheng Li</b>. CrossMatch: Cross-Classifier Consistency Regularization for Open-Set Single Domain Generalization. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2022.</li>
