--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="col-md-12">
           <p class="">
-            <b>Research Interests</b>: Trustworthy Representation Learning (e.g., Robustness, Fairness, Causality, Transferability); Visual Intelligence; User Modeling; Natural Language Understanding; Bioinformatics; Biomedical Informatics.</p>
+            <b>Research Interests</b>: Trustworthy Representation Learning (e.g., Robustness, Fairness, Causality, Transferability); Computer Vision; Interdisciplinary Applications (Bioinformatics, Biomedical Informatics, Public Health, Ecology, Education, etc.)</p>
         </div>
       </div>
     </div>
