--- a/publications.html
+++ b/publications.html
@@ -78,12 +78,14 @@
             <b>Journal Papers</b>&nbsp;(<b><i>2 IEEE TPAMI, 6 IEEE TNNLS, 4 IEEE TKDE, 3 IEEE TIP, 3 IEEE TCSVT, 3 ACM TKDD, 1 ACM TOMM, 1 IEEE TETCI, 1 DMKD, 1 Nature Communications, 1 eLife, 1 BMC Bioinformatics, 1 ISJ, 1 NN, and 1 MTA</i></b>)</p>
 		<p class="">	
         <b>Conference Papers</b>
-        <i>(<b>2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 8 CIKM, 6 SDM, 5 ICDM, 3 SIGIR, 5 IEEE BigData, 1 ICLR, 1 ICCV, 1 CVPR, 1 ECCV, 1 ICDE, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
+        <i>(<b>2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 8 CIKM, 8 SDM, 5 ICDM, 3 SIGIR, 5 IEEE BigData, 1 ICLR, 1 ICCV, 1 CVPR, 1 ECCV, 1 ICDE, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
 		</p>
            
           <ol class="">
 			<b>2023</b>
 		  	<li>Zhixuan Chu, Ruopeng Li, Stephen Rathbun, and <b>Sheng Li</b>. Continual Causal Inference with Incremental Observational Data. <i>The 39th IEEE International Conference on Data Engineering (<b>ICDE</b>)</i>, 2023.</li>
+		  	<li>Saed Rezayi, Handong Zhao, Ronghang Zhu, and <b>Sheng Li</b>. XDC: Adaptive Cross Domain Short Text Clustering. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2023.</li>
+		 	<li>Zhixuan Chu, Mechelle Claridy, Jose Cordero, <b>Sheng Li</b>, and Stephen Rathbun. Estimating Propensity Scores with Deep Adaptive Variable Selection. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2023.</li>
 		  	<li>Zhixuan Chu and <b>Sheng Li</b>. Continual Causal Inference: Challenges and Opportunities. <i>The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI) Bridge Program - Continual Causality</i>, 2023.</li>
 		  	<li>Zhanwen Chen, Saed Rezayi, <b>Sheng Li</b>. More Knowledge, Less Bias: Unbiasing Scene Graph Generation with Explicit Ontological Adjustment. <i>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>)</i>, 2023.</li>
 		  	<li>Hemadri Jayalath, Ghadeer Yassin, Lakshmish Ramaswamy, and <b>Sheng Li</b>. Continual Optimization of In-Production Machine Learning Systems through Semantic Analysis of User Feedback. <i>The 15th International Conference on Agents and Artificial Intelligence (<b>ICAART</b>)</i>, 2023.</li>
