--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@
            
           <ol class="">
 			<b>2023</b>
-		  	<li>Zhongliang Zhou, Wayland Yeung, Nathan Gravel, Mariah Salcedo, Saber Soleymani, <b>Sheng Li</b>, and Natarajan Kannan. Phosformer: An explainable Transformer model for protein kinase-specific phosphorylation predictions. <i>Bioinformatics</i>, 2023.</li> 
+		  	<li>Zhongliang Zhou*, Wayland Yeung*, Nathan Gravel, Mariah Salcedo, Saber Soleymani, <b>Sheng Li</b>, and Natarajan Kannan. Phosformer: An explainable Transformer model for protein kinase-specific phosphorylation predictions. <i>Bioinformatics</i>, 2023. (* indicates equal contribution)</li> 
 		  	<li>Zhixuan Chu, Ruopeng Li, Stephen Rathbun, and <b>Sheng Li</b>. Continual Causal Inference with Incremental Observational Data. <i>The 39th IEEE International Conference on Data Engineering (<b>ICDE</b>)</i>, 2023.</li>
 		  	<li>Saed Rezayi, Handong Zhao, Ronghang Zhu, and <b>Sheng Li</b>. XDC: Adaptive Cross Domain Short Text Clustering. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2023.</li>
 		 	<li>Zhixuan Chu, Mechelle Claridy, Jose Cordero, <b>Sheng Li</b>, and Stephen Rathbun. Estimating Propensity Scores with Deep Adaptive Variable Selection. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2023.</li>
