--- a/publications.html
+++ b/publications.html
@@ -78,12 +78,15 @@
             <b>Journal Papers</b>&nbsp;(<b><i>2 IEEE TPAMI, 6 IEEE TNNLS, 4 IEEE TKDE, 3 IEEE TIP, 3 IEEE TCSVT, 3 ACM TKDD, 1 ACM TOMM, 1 IEEE TETCI, 1 DMKD, 1 Nature Communications, 1 eLife, 1 BMC Bioinformatics, 1 ISJ, 1 NN, and 1 MTA</i></b>)</p>
 		<p class="">	
         <b>Conference Papers</b>
-        <i>(<b>2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 8 CIKM, 8 SDM, 5 ICDM, 3 SIGIR, 5 IEEE BigData, 1 ICLR, 1 ICCV, 1 CVPR, 1 ECCV, 1 ICDE, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
+        <i>(<b>4 ICLR, 2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 8 CIKM, 8 SDM, 5 ICDM, 3 SIGIR, 5 IEEE BigData, 1 ICCV, 1 CVPR, 1 ECCV, 1 ICDE, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
 		</p>
            
           <ol class="">
 			<b>2023</b>
 		  	<li>Zhongliang Zhou*, Wayland Yeung*, Nathan Gravel, Mariah Salcedo, Saber Soleymani, <b>Sheng Li</b>, and Natarajan Kannan. Phosformer: An explainable Transformer model for protein kinase-specific phosphorylation predictions. <i>Bioinformatics</i>, 2023. (* indicates equal contribution)</li> 
+		  	<li>Dongliang Guo, Zhixuan Chu, and <b>Sheng Li</b>. Fair Attribute Completion on Graph with Missing Attributes. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.</li>
+		  	<li>Daiqing Qi, Handong Zhao, and <b>Sheng Li</b>. Better Generative Replay for Continual Federated Learning. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.</li>
+		  	<li>Ronghang Zhu, Xiang Yu, and <b>Sheng Li</b>. Progressive Mix-Up for Few-Shot Supervised Multi-Source Domain Transfer. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.</li>
 		  	<li>Zhixuan Chu, Ruopeng Li, Stephen Rathbun, and <b>Sheng Li</b>. Continual Causal Inference with Incremental Observational Data. <i>The 39th IEEE International Conference on Data Engineering (<b>ICDE</b>)</i>, 2023.</li>
 		  	<li>Saed Rezayi, Handong Zhao, Ronghang Zhu, and <b>Sheng Li</b>. XDC: Adaptive Cross Domain Short Text Clustering. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2023.</li>
 		 	<li>Zhixuan Chu, Mechelle Claridy, Jose Cordero, <b>Sheng Li</b>, and Stephen Rathbun. Estimating Propensity Scores with Deep Adaptive Variable Selection. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2023.</li>
