--- a/publications.html
+++ b/publications.html
@@ -84,6 +84,7 @@
           <ol class="">
 			<b>2023</b>
 		  	<li>Zhongliang Zhou*, Wayland Yeung*, Nathan Gravel, Mariah Salcedo, Saber Soleymani, <b>Sheng Li</b>, and Natarajan Kannan. Phosformer: An explainable Transformer model for protein kinase-specific phosphorylation predictions. <i>Bioinformatics</i>, 2023. (* indicates equal contribution)</li> 
+		  	<li>Juliet N. Sekandi, Weili Shi, Ronghang Zhu, Patrick Evans Kaggwa, Ernest Mwebaze, and <b>Sheng Li</b>. Application of Artificial Intelligence to Monitoring of Medication Adherence for Tuberculosis Treatment in Africa: A Pilot Study. JMIR AI, 2023.
 		  	<li>Dongliang Guo, Zhixuan Chu, and <b>Sheng Li</b>. Fair Attribute Completion on Graph with Missing Attributes. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.</li>
 		  	<li>Daiqing Qi, Handong Zhao, and <b>Sheng Li</b>. Better Generative Replay for Continual Federated Learning. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.</li>
 		  	<li>Ronghang Zhu, Xiang Yu, and <b>Sheng Li</b>. Progressive Mix-Up for Few-Shot Supervised Multi-Source Domain Transfer. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.</li>
