--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		  	<li>12/2022, I accepted the invitation to serve as Area Chair for <a href="https://icml.cc/Conferences/2023" target="_blank">ICML 2023</a>.</li>
 		  	<li>11/2022, I accepted the invitation to serve as Area Chair for <a href="https://ijcai-23.org/" target="_blank">IJCAI 2023</a>.</li>
 		  	<li>10/2022, One paper on scene graph generation is accepted at <a href="https://wacv2023.thecvf.com/" target="_blank">WACV 2023</a>; Two papers on visual learning are accepted at <a href="https://bigdataieee.org/BigData2022/" target="_blank">IEEE BigData 2022</a>.</li>
-		  	<li>09/2022, I will co-organize a tutorial (Machine Learning for Causal Inference) and a workshop (<a href="https://ai4webads2023.github.io/" target="_blank">AI for Web Ads</a>) at <a href="https://aaai.org/Conferences/AAAI-23/" target="_blank">AAAI 2023</a>.</li> 
+		  	<li>09/2022, I will co-organize a tutorial ((<a href="https://aaai23causalinference.github.io/" target="_blank">Machine Learning for Causal Inference</a>) and a workshop (<a href="https://ai4webads2023.github.io/" target="_blank">AI for Web Ads</a>) at <a href="https://aaai.org/Conferences/AAAI-23/" target="_blank">AAAI 2023</a>.</li> 
 		  	<li>09/2022, Received the <a href="https://research.adobe.com/data-science-research-awards/" target="_blank">Adobe Data Science Research Award</a>.</li>
 		  	<li>09/2022, One paper on causality guided model interpretation is accepted by IEEE Trans. Knowledge and Data Engineering (TKDE).</li>
 		  	<li>08/2022, Received a <strong>HHS R01 Grant</strong> (as Co-I; PI: Prof. Andrea Sikora) to develop AI based health IT tools to assist critical care pharmacists.</li>
