--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
-		  	<li>02/2023, One paper on video recognition is accepted at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>
+		  	<li>03/2023, One paper on trustworthy representation learning is accepted to the Blue Sky Idea Track of <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>.</li> 
+		   	<li>02/2023, One paper on video recognition is accepted at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>
 		  	<li>02/2023, We will organize a tutorial Recent Advances in Visual Domain Adaptation and Generalization at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>  
 		  	<li>01/2023, Three papers on fair graph learning, continual federated learning, and few-shot transfer learning are accepted at <a href="https://iclr.cc/Conferences/2023" target="_blank">ICLR 2023</a>.</li> 
 		  	<li>01/2023, One paper is accepted by Bioinformatics; One paper is accepted by JMIR AI.</li>
