--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
+		  	<li>04/2023, Two papers on graph-based local clustering and time series forecasting are accepted at <a href="https://ijcai-23.org/" target="_blank">IJCAI 2023</a>.</li> 
+		  	<li>04/2023, We will organize <a href="https://web.northeastern.edu/smilelab/amfg2023/" target="_blank">The 11th IEEE International Workshop on Analysis and Modeling of Faces and Gestures (AMFG)</a> at ICCV 2023.</li>
+		  	<li>04/2023, I accepted the invitation to serve as Area Chair for <a href="https://nips.cc/Conferences/2023" target="_blank">NeurIPS 2023</a>.</li>
 		  	<li>03/2023, One paper on trustworthy representation learning is accepted to the Blue Sky Idea Track of <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>.</li> 
 		   	<li>02/2023, One paper on video recognition is accepted at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>
 		  	<li>02/2023, We will organize a tutorial Recent Advances in Visual Domain Adaptation and Generalization at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>  
@@ -192,7 +195,7 @@
         <div class="col-md-12">
           <ul class="">
             <li>
-              <b>Panelist</b>: NSF (III, NAIRI, CRII, GRFP), CDC</li>  
+              <b>Panelist</b>: NSF (III, OAC, NAIRI, CRII, GRFP), CDC</li>  
             <li>
               <b>Associate Editor</b>: IEEE Trans. Neural Networks and Learning Systems (2022 - ), IEEE Transactions on Circuits and Systems for Video Technology (2021 - ), IEEE Computational Intelligence Magazine (2019 - ), Neurocomputing (2017 - 2022), Journal of Electronic Imaging (2018 - 2022), IET Image Processing (2017 - 2020)</li>
 			<li>
@@ -203,7 +206,7 @@
 	    <li>
               <b>Publicity Chair</b>: ICMLA (2016), TCMFTL (2016), AMFG (2015-2017)</li>
             <li>
-              <b>Area Chair</b>: ICML (2023), IJCAI (2023), NeurIPS (2022), ICLR (2022-2023), ICPR (2020-2022), VCIP (2017)</li>
+              <b>Area Chair</b>: ICML (2023), IJCAI (2023), NeurIPS (2022-2023), ICLR (2022-2023), ICPR (2020-2022), VCIP (2017)</li>
             <li>
               <b>SPC Member</b>: IJCAI (2020-2021), AAAI (2019-2022), SDM (2023)</li>
             </ul>
